--- a/src/app/categorias/categorias.page.html
+++ b/src/app/categorias/categorias.page.html
@@ -23,7 +23,7 @@
         <ion-card-title class="titulo-produto">{{item.nome}}</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <ion-button (click)="verProdutos(item.id)" expand="block" color="primary" ><ion-icon name="eye"></ion-icon>VER</ion-button>
+        <ion-button (click)="verProdutos(item.id)" expand="block" color="primary" ><ion-icon class="iconever" name="eye"></ion-icon><div class="ver">VER</div></ion-button>
       </ion-card-content>
     </ion-card>
 
