--- a/src/app/categorias/categorias.page.scss
+++ b/src/app/categorias/categorias.page.scss
@@ -6,7 +6,7 @@ ion-card-title{
 
 ion-card-subtitle{
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 200;
 }
 
@@ -29,4 +29,12 @@ ion-row{
 
 .menu-button{
     color:white;
+}
+
+.iconever{
+    font-size: 15px;
+}
+
+.ver{
+    font-size: 14px;
 }
