--- a/src/app/produtos/produtos.page.html
+++ b/src/app/produtos/produtos.page.html
@@ -19,7 +19,7 @@
         <ion-card-subtitle>R$ {{item.valor}}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        <ion-button expand="block" color="success">
+        <ion-button (click)="addCarrinho(item.id)" expand="block" color="success">
           <ion-icon name="cart"></ion-icon> 
           +
         </ion-button>
